# agent-client

./: .editorconfig  .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yml  main.yml  tag-release.yml
scripts/: sync-version.js
src/: App.vue  env.d.ts  main.ts  router.ts  style.css
src-tauri/: 2  Cargo.toml  tauri.android.conf.json5  tauri.conf.json5
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/: geosite-geolocation-cn.srs
src-tauri/src/: command.rs  lib-2.rs  lib.rs  logger.rs  tray.rs  trojan.rs
src-tauri/src/engine/: mod.rs  trojan.rs  trojan_backup.rs
src-tauri/src/platform/: desktop.rs  mobile.rs  mod.rs
src/components/: BottomSheet.vue  ButtonWrapper.vue  ConfigInfoCard.vue  ConfigInfoCardByRemote.vue  ConfigRawView.vue  DebugButton.vue  Disclosure.vue  ImportRemoteModal.vue  InputGroup.vue  NavBar.vue  ToastContainer.vue  Toggle.vue  UIDialog.vue  UISwitch.vue
src/composables/: useToast.ts
src/config/: config.ts  constants.ts
src/pages/: CreateEdit.vue  Detail.vue  Home.vue  LogViewer.vue  Settings.vue  SingBoxDetail.vue
src/stores/: system.ts  userConf-backup.ts  userConf.ts
src/typings/: api.d.ts  config.ts  singBoxConfig.ts  thunnel.d.ts
src/utils/: configParser.ts  fileReader.ts  haptics.ts  rustUtils.ts  rustUtils_backup.ts  stronghold.ts  trojan.rs  updater.ts  utils.ts  validate.ts
src/utils/trojan/: commands.rs  (+2 more)
tauri-plugin-vpn-helper/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-vpn-helper/android/: build.gradle.kts
(+30 files in other folders)
